Jun 27, 2022
  upgraded log4j to avoid zero day exploit

Mar 29, 2022
  removed obsolete property 'variantTable'
  added mouse, pig and green monkey assemblies for processing

Jul 21, 2021
  added rat assembly 7.2

May 19, 2021
  updated sql queries to new variant table structure

Jun 26, 2020
  reduced verbosity in summary email

May 10, 2020
  updated jar references

Jan 28, 2020
  fixed import.sh script

Sep 18, 2019
  improved logging: use log4j instead of System.out.println

ver 1.3.9 May 7, 2019
  variant table name for human renamed to variant_clinvar

ver 1.3.8 Sep 21, 2018
  moved from subversion to github; moved from ANT to GRADLE
  
ver 1.3.7, May 23, 2018
  added bonobo support (only on dev)

ver 1.3.6, Nov 2, 2016
  added support for human assemblies build 37 and build 38

ver 1.3.5, Mar 11, 2016
  1. cleanup: got rid of hardcoded db info; updated rgdcore.jar

ver 1.3.4, Feb 22, 2016
  1. updated dbSnp build for rn6 (dbSnp146); updated rgdcore.jar

ver 1.3.3, Oct 2, 2015
  1. updated rgdcore.jar
  2. fixed logic for which samples the data is updated:
     for given species, it computes data only for samples with patient having the same map_key as the map_key processed

ver 1.3.2, Feb 4, 2015
  1. updated jars
  2. added config for processing Rnor_6.0
  3. option to run the pipeline for a single user-supplied map key

ver 1.3.1, Dec 8, 2014
  updated jars; fixed issue with logs
  (log files were created in directory GeneLociPipeline/../logs
   instead of                          GeneLociPipeline/logs)

ver 1.3, Nov 2013
  1. moved all configuration information from code into AppConfigure.xml for better maintainability;
  2. added code for rnor 5
  3. updated rgdcore to latest rgdcore.jar snapshot from test branch (production quality)